--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <main class="main">
 
         <section class="about">
+
             <div class="entete">
                 <h1 class="titre1">+About+</h1>
                  <div class="number-fleche">
@@ -40,8 +41,13 @@
                  <i id= "arrow"class="bi bi-arrow-down-circle-fill"></i>
                  </div>
             </div>
+
+        <div class="entete2"> 
+
             <p data-splitting class="paragraphes"  id="space">Passionate about photography since —2020, I started by exploring street[—]photography with a film camera, which allowed me to develop and refine my artistic vision. For fashion / photography, I use a digital [—]camera to capture sharper and more dynamic images——————.</p>
             <p class="date">©2020</p>
+            
+         </div>
         </section>
 
     <!-- SECTION WORK-->
